# DepMap-NextGen-Public

./: README.md  pyproject.toml
data/: README.md
figures/: README.md
processed/: README.md
src/: 2d3d_onctsg_dependency.R  EDFig11a_pdacc_associated_dep_wnt3a.R  EDFig11bc_Wnt_dependency_mutation_association.R  EDFig11c_wnt_dependency_mut_association.R  EDFig12ac_2d3d_onctsg_dependency.R  EDFig12ac_oncogene_TSG_dependency.R  EDFig5a_cns2d3d_expression_dendrogram.R  EDFig5ad_nextgen_expr.R  EDFig5d_cds2d3d_expression_volcano.R  EDFig6b_cnsorg2d3d_dependency_volcano.R  EDFig6b_dependencies_corr_pdac_muc.R  EDFig8e_glial_nextgen_diff_dependency.R  EDFig8e_glial_v_nextgen.R  EDFig8f_cdk6dep_mut_association.R  EDFig8g_cdk6dep_cn_association_glial.R  Fig3d_EDFig6c_GBM_GSEA.R  Fig3d_glial_mesenchymal_diff_dependency.R  Fig3e_glial_v_mesenchymal.R  Fig3f_cdk6dep_cn_association.R  Fig3g_CDK6_dependency_CN_correlation.R  GBM_celligner_transcriptional_analysis.R  README.md  SupplementaryFig1a.R  achilles_qc.py  cdk6dep_cdkn2acn_per_lineage.R  cdk6dep_cn_association.R  celligner.py  cnsorg2d3d_dependency_volcano.R  constants.py  data_utils.py  depmap_han_2d3d_screens.R  experimental_validation.py  expression_addiction.py  figure_legends.py  figure_utils.py  gene_utils.py  generate.py  glial_mesenchymal_diff_dependency.R  glial_nextgen_diff_dependency.R  glioblastoma_dependencies.py  (+11 more)
src/assets/: custom_legend_elements.py  figshare_token.txt  stylesheet.mplstyle
