[project]
name = "depmap-nextgen"
version = "0.2.0"
description = "Python environment for DepMap's NextGen manuscript"
authors = [
    {name = "smaffa", email="smaffa@broadinstitute.org"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "crispr-chronos @ git+https://github.com/broadinstitute/chronos.git",
    "tensorflow (==2.17.0)",
    "matplotlib (==3.9.2)",
    "seaborn (==0.13.2)",
    "plotly (==5.24.1)",
    "kaleido (==0.2.1)",
    "upsetplot (==0.9.0)",
    "umap-learn (==0.5.6)",
    "lxml (==5.3.0)",
    "gseapy (==1.1.3)",
    "scikit-learn (==1.5.2)",
    "scipy (==1.14.1)",
    "jupyter (==1.1.1)",
    "ipykernel (==6.29.5)",
    "adjusttext (==1.2.0)",
    "pandas (==1.5.3)",
    "numpy (==1.26.4)",
    "tqdm (==4.67.0)",
    "ensembl-rest (==0.3.4)",
    "taigapy @ git+https://github.com/broadinstitute/taigapy.git",
    "fsspec (>=2025.10.0,<2026.0.0)",
    "gcsfs (>=2025.10.0,<2026.0.0)",
    "gumbo-rest-client (>=2.0.7,<3.0.0)",
    "cds @ git+https://github.com/broadinstitute/cdspy.git",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "supplemental"


[tool.poetry.dependencies]
gumbo-rest-client = {source = "public-python"}
